testsuite/tests/checks/specific_parent_type_invariant/test.out
inv.ads:18:18: error: parent type has specific Type_Invariant aspect
18 |    type PT2_N is new PT2 with null record;    --  FLAG
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^ 

inv.ads:24:18: error: parent type has specific Type_Invariant aspect
24 |    type N_PT2 is new Pack1.PT2 with private;  --  FLAG
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

